actually fix offscreen footer problem all the way

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -113,6 +113,9 @@ img.institution {
 .bd-sidebar {
     height: unset;
 }
+.bd-toc {
+    height: unset;
+}
 
 /* ***************************************************** front page carousel */
 div.frontpage-gallery {
